# ecs-lens

./: .gitignore  CHANGELOG.md  README.md  ecs-lens.cabal  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cjjpqrp9xy44j5fjh3mygyxy3i7mslj2-source  vdlwgxvvg0wbgy3gmg5sd00jg6kswv9x-source
app/: Main.hs
