cabal-version:      2.4
name:               ecs-lens
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Allan
maintainer:         timeolord6677@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ecs-lens
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
                      mtl ^>=2.3.1,
                      lens ^>=5.2.1,
                      containers ^>=0.6.7,
                      data-default ^>= 0.7.1
    hs-source-dirs:   app
    default-language: Haskell2010
